fixed broken horizontal scroll bar

--- a/core/src/main/webapp/styles/style.css
+++ b/core/src/main/webapp/styles/style.css
@@ -790,6 +790,7 @@ footer,
     left: 0;
     height: 40px;
     line-height: 40px;
+    margin-bottom: 12px;
     position: absolute;
     text-align: center;
     width: 100%;
